--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -588,7 +588,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/1">艺术类</a></h6>
+                                    <h6><a href="/product/category/1">粮食类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -602,7 +602,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/2">音乐类</a></h6>
+                                    <h6><a href="/product/category/2">油料类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -616,7 +616,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/3">整合类</a></h6>
+                                    <h6><a href="/product/category/3">肉类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -630,7 +630,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/4">运动类</a></h6>
+                                    <h6><a href="/product/category/4">糖类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -644,7 +644,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/5">收集类</a></h6>
+                                    <h6><a href="/product/category/5">果品类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -658,7 +658,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/6">卡片类</a></h6>
+                                    <h6><a href="/product/category/6">干菜类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -672,7 +672,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/7">元宇宙</a></h6>
+                                    <h6><a href="/product/category/7">中药材</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -686,7 +686,7 @@
                                     </a>
                                 </div>
                                 <div class="cat-content">
-                                    <h6><a href="/product/category/8">领域类</a></h6>
+                                    <h6><a href="/product/category/8">蔬菜类</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -2122,3 +2122,5 @@
         </div>
     </div>
 </div>
+
+
