--- a/src/main/resources/templates/index-2.html
+++ b/src/main/resources/templates/index-2.html
@@ -6,7 +6,7 @@
 
     <meta name="author" content="Labartisan">
     <meta name="description"
-        content="Anftiz is a full-fledged NFT or Digital assets marketplace HTML template. It is suitable for selling NFTs, or non-fungible tokens, Digital Arts, Digital Music & All types of Digital Assets. You can create, sell & collect NFT’s or digital assets through this website.">
+        content="Anftiz is a full-fledged NFT or Digital assets m   arketplace HTML template. It is suitable for selling NFTs, or non-fungible tokens, Digital Arts, Digital Music & All types of Digital Assets. You can create, sell & collect NFT’s or digital assets through this website.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Meta tags for Social Media(Better SEO) -->
